<resources>
    <string name="app_name">Hydrotech</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="fullname">Fullname</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="select_gender">Select Gender</string>
    <string name="select_birth_date">Select Birth Date</string>
    <string name="select_role">Select Role</string>
    <string name="dont_have_an_account_register_here">Don\'t have an account? Register here</string>
    <string name="serial_number">Serial Number</string>
    <string name="dont_have_a_device_buy_here">Don\'t have a device? Buy here</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="studens">Student</string>
    <string name="lecturer">Lecturer</string>
    <string name="researcher">Researcher</string>
    <string name="farmer">Farmer</string>
    <string name="garden_owner">Garden Owner</string>
    <string name="password_and_confirm_password_doesnt_match">Password and Confirm Password doesn\'t match</string>
    <string name="please_fill_all_the_fields">Please fill all the fields</string>
    <string name="processing">Processing</string>
    <string name="please_wait">Please wait</string>
    <string name="choose_different_email_and_password">Choose different email and password</string>
    <string name="please_select_a_valid_gender">Please select a valid gender</string>
    <string name="please_select_a_valid_role">Please select a valid role</string>
    <string name="birth_date">Birth date :</string>
    <string name="email_and_password_is_incorrect">Email and password is incorrect</string>
    <string name="serial_number_is_invalid">Serial number is invalid</string>
    <string name="password_is_invalid">Password is invalid</string>
    <string name="welcome">Welcome</string>
    <string name="forget_password">Forget password</string>
    <string name="logout">Logout</string>
    <string name="devices">Devices</string>
    <string name="profile">Profile</string>
    <string name="actual_parameters">Actual Parameters</string>
    <string name="optimal_parameters">Optimal Parameters</string>
    <string name="test">Test</string>
    <string name="electric_conductivity">Electric\nConductivity</string>
    <string name="acidity_ph">Acidity\n(pH)</string>
    <string name="light_intensity">Light\nIntensity</string>
    <string name="water_flow">Water\nFlow</string>
    <string name="status">Status</string>
    <string name="conclusion_and_suggestion">Conclusion and Suggestion</string>
    <string name="your_devices">Your Devices</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="register_device">Register Device</string>
    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="select_plant">Select Plant</string>
    <string name="please_select_a_valid_plant">Please select a valid plant</string>
    <string name="location">Location</string>
    <string name="show_password_for_this_device">Show password for this device</string>
    <string name="password_for">Password for</string>
    <string name="is">is :</string>
    <string name="history_of">History of</string>
    <string name="ec">EC</string>
    <string name="ph">pH</string>
    <string name="light">Light</string>
    <string name="flow">Flow</string>
    <string name="container_volume">Container Volume</string>
    <string name="container_volume_in_liters">Container Volume (in Liters) :</string>
    <string name="ec_is_not_in_optimal_range">EC is not in optimal range. Turn the hardware on!</string>
    <string name="ph_is_not_in_optimal_range">pH is not in optimal range. Turn the hardware on!</string>
    <string name="flow_is_not_in_optimal_range">Water flow is not in optimal range. Change your water pump or try raising or lowering the degree slope of NFT!</string>
    <string name="intensity_is_not_in_optimal_range">Light intensity is not in optimal range. Turn on the lamp or change the light bulb!</string>
    <string name="nft_is_optimum">NFT is optimum</string>

    <string-array name="select_gender_array">
        <item>@string/select_gender</item>
        <item>@string/male</item>
        <item>@string/female</item>
    </string-array>

    <string-array name="select_role_array">
        <item>@string/select_role</item>
        <item>@string/studens</item>
        <item>@string/lecturer</item>
        <item>@string/researcher</item>
        <item>@string/farmer</item>
        <item>@string/garden_owner</item>
    </string-array>

</resources>
