<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityRegister"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/fullnameEditTextActivityRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fullname"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/phoneNumberEditTextActivityRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:inputType="number"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/emailEditTextActivityRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:passwordToggleDrawable="@drawable/ic_remove_red_eye_black_24dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/passwordEditTextActivityRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:passwordToggleDrawable="@drawable/ic_remove_red_eye_black_24dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/confirmPasswordEditTextActivityRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/selectBirthDateButtonActivityRegister"
        android:text="@string/select_birth_date"
        android:textAllCaps="false"
        android:padding="10dp"
        android:textSize="16sp"
        android:background="@color/black"
        android:textColor="@color/white"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/selectGenderSpinnerActivityRegister">

    </Spinner>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/selectRoleSpinnerActivityRegister">

    </Spinner>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registerButtonActivityRegister"
        android:text="@string/register"
        android:padding="10dp"
        android:textSize="16sp"
        android:background="@color/black"
        android:textColor="@color/white"/>
</LinearLayout>