<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ActivityEditProfile">

    <LinearLayout
        android:background="@drawable/rounded_rectangle_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:paddingBottom="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="20dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:src="@color/white"
            app:civ_border_color="@color/green_A700"
            app:civ_border_width="3dp"
            android:id="@+id/profileCircleImageViewActivityEditProfile"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/fullnameEditTextActivityEditProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fullname"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="18sp"
                android:textColorHint="@color/black"
                android:textColor="@color/green_A700"
                android:layout_marginBottom="10dp"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/phoneNumberEditTextActivityEditProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:inputType="number"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="18sp"
                android:textColorHint="@color/black"
                android:textColor="@color/green_A700"
                android:layout_marginBottom="10dp"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/emailEditTextActivityEditProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="18sp"
                android:textColorHint="@color/black"
                android:textColor="@color/green_A700"
                android:layout_marginBottom="10dp"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/ic_remove_red_eye_black_24dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/passwordEditTextActivityEditProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColorHint="@color/black"
                android:textColor="@color/green_A700"
                android:layout_marginBottom="10dp"
                android:textSize="18sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/ic_remove_red_eye_black_24dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/confirmPasswordEditTextActivityEditProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColorHint="@color/black"
                android:textColor="@color/green_A700"
                android:layout_marginBottom="10dp"
                android:textSize="18sp" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/selectBirthDateButtonActivityEditProfile"
            android:text="@string/select_birth_date"
            android:textAllCaps="false"
            android:padding="10dp"
            android:textSize="16sp"
            android:background="@color/white"
            android:layout_marginBottom="10dp"
            android:textColor="@color/green_A700"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/selectGenderSpinnerActivityEditProfile">

        </Spinner>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/selectRoleSpinnerActivityEditProfile">

        </Spinner>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/saveButtonActivityEditProfile"
            android:text="@string/save"
            android:textColor="@color/white"
            android:background="@drawable/rounded_rectangle_green"
            android:padding="10dp"
            android:textSize="16sp"/>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>