<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityLogin"
    android:background="@color/white">

    <LinearLayout
        android:background="@drawable/rounded_rectangle_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:paddingTop="50dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:paddingBottom="30dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/emailEditTextActivityLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="text"
                android:paddingRight="10dp"
                android:textSize="20sp"
                android:textColorHint="@color/black"
                android:textColor="@color/green_A700"
                android:layout_marginBottom="10dp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/ic_remove_red_eye_black_24dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/passwordEditTextActivityLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingRight="10dp"
                android:textSize="20sp"
                android:textColorHint="@color/black"
                android:textColor="@color/green_A700"
                android:layout_marginBottom="10dp"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_gravity="end"
            android:text="@string/forget_password"
            android:textColor="@color/grey_700"
            android:id="@+id/forgetPasswordTextViewActivityLogin"
            android:layout_marginBottom="50dp"/>

        <Button

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@drawable/rounded_rectangle_green"
            android:textSize="20sp"
            android:text="@string/login"
            android:id="@+id/loginButtonActivityLogin"
            android:layout_gravity="bottom"/>
    </LinearLayout>

    <TextView
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:id="@+id/registerHereTextViewActivityLogin"
        android:layout_marginBottom="10dp"/>

</RelativeLayout>